--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 								<p>Більше 100 успішних проектів</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">Ми створюємо неперевершені &amp; Minimal Website</h1>
+								<h1 class="mb-4">Ми створюємо неперевершені &amp; Мінімалістичні Дизайни</h1>
 								<p>Кожен творець починається з тебе, з твоєї думки, ідеї та твоїх дій</p>
-								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Start Project</a></p>
+								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Почати проект</a></p>
 							</div>
 						</div>
 						<a href="https://vimeo.com/45830194" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
@@ -74,9 +74,9 @@
 								<p>Роки досвіду</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">Ми створюємо майбутнє &amp; Minimal Website</h1>
+								<h1 class="mb-4">Ми створюємо майбутнє &amp; Мінімалістичні Дизайни</h1>
 								<p>Кожен творець починається з тебе, з твоєї думки, ідеї та твоїх дій</p>
-								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Explore Projects</a></p>
+								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Дослідити Проект</a></p>
 							</div>
 						</div>
 						<a href="https://vimeo.com/45830194" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
@@ -240,7 +240,7 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc text-md-right">
 										<div class="top">
-											<span class="subheading">ВЕБДОДАТКИ</span>
+											<span class="subheading">ВЕБ ДОДАТКИ</span>
 											<h2 class="mb-2"><a href="work.html">Мінімалістичний годинник</a></h2>
 										</div>
 										<div class="absolute">
@@ -274,7 +274,7 @@
 									<div class="desc">
 										<div class="top">
 											<span class="subheading">UI/UX Design</span>
-											<h2 class="mb-2"><a href="work.html">WebDesign Агенція</a></h2>
+											<h2 class="mb-2"><a href="work.html">Дизайн Агенція</a></h2>
 										</div>
 										<div class="absolute">
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -305,7 +305,7 @@
 									<div class="desc text-md-right">
 										<div class="top">
 											<span class="subheading">ВЕБ РОЗРОБНИК</span>
-											<h2 class="mb-2"><a href="work.html">Hand Writing</a></h2>
+											<h2 class="mb-2"><a href="work.html">Робота від Руки</a></h2>
 										</div>
 										<div class="absolute">
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -318,7 +318,7 @@
 													</div>
 												</div>
 											</div>
-											<p><a href="#" class="custom-btn">1Дивитися Портфоліо</a></p>
+											<p><a href="#" class="custom-btn">Дивитися Портфоліо</a></p>
 										</div>
 									</div>
 								</div>
@@ -489,9 +489,9 @@
 					<div class="intro p-md-4 py-md-5 p-2 rounded img" style="background-image: url(images/bg_1.jpg);">
 						<div class="col-md-6 ftco-animate">
 							<span>Давайте почнем</span>
-							<h2>Заповнюйте анкету та надсилайте нам на почту або через форсу на сайті</h2>
+							<h2>Заповнюйте анкету та надсилайте нам на почту або через форму на сайті</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="#" class="btn btn-primary">Get started</a></p>
+							<p><a href="#" class="btn btn-primary">Надіслати Анкету</a></p>
 						</div>
 					</div>
 				</div>
@@ -503,7 +503,7 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h2>RecentБлог</h2>
+					<h2>Початковий Блог</h2>
 				</div>
 			</div>
 			<div class="row d-flex">
