--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Початкова</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">Детальніше</a></li>
-					<li class="nav-item"><a href="work.html" class="nav-link">Работа</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Блог</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Контакти</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Детальніше</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Работа</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Блог</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Контакти</a></li>
 				</ul>
 			</div>
 		</div>
@@ -52,7 +52,7 @@
 								<p>Більше 100 успішних проектів</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">Ми створюємо неперевершені &amp; Мінімалістичні Дизайни</h1>
+								<h1 class="mb-4">Ми створюємо неперевершені &amp; MIMIMAL WEBSITE</h1>
 								<p>Кожен творець починається з тебе, з твоєї думки, ідеї та твоїх дій</p>
 								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Почати проект</a></p>
 							</div>
@@ -74,7 +74,7 @@
 								<p>Роки досвіду</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">Ми створюємо майбутнє &amp; Мінімалістичні Дизайни</h1>
+								<h1 class="mb-4">Ми створюємо майбутнє &amp;MINIMAL WEBSITE</h1>
 								<p>Кожен творець починається з тебе, з твоєї думки, ідеї та твоїх дій</p>
 								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Дослідити Проект</a></p>
 							</div>
