--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 				<div class="col-md-3 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<div class="text">
-							<h3 class="heading mb-3"><a href="#">Технологічне виробництво технологій ЦАО</a></h3>
+							<h3 class="heading mb-3"><a href="#">Технологічне виробництво</a></h3>
 							<a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_4.jpg');">
 							</a>
 							<div class="meta mb-3">
